Update user in shopify
