# server/openapi/openapi.yaml
@@ -1796,6 +1796,9 @@ components:
         email:
           title: email
           $ref: '#/components/schemas/email'
+        phone_number:
+          title: phone_number
+          type: string
         shopify_id:
           title: shopify_id
           type: string
@@ -1818,6 +1821,9 @@ components:
         email:
           title: email
           $ref: '#/components/schemas/email'
+        phone_number:
+          title: phone_number
+          type: string
         shopify_id:
           title: shopify_id
           type: string
